@@ -20,19 +20,4 @@ TAO::Refcounted_ObjectKey::~Refcounted_ObjectKey (void)
 {
 }
 
-CORBA::ULong
-TAO::Refcounted_ObjectKey::decr_refcount (void)
-{
-  if (--this->ref_count_ > 0)
-    {
-      return this->ref_count_;
-    }
-
-  ACE_ASSERT (this->ref_count_ == 0);
-
-  delete this;
-
-  return 0;
-}
-
 TAO_END_VERSIONED_NAMESPACE_DECL
